--- a/index.html
+++ b/index.html
@@ -1,54 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visitor Notification</title>
+    <title>About Me</title>
+</head>
+<body>
+    <h1>hiJ</h1>
+    <p>Ih</p>
+    <p>hi</p>
+    <p>hi</p>
+    <!-- Visit Counter -->
+    <p>This website has been visited <span id="visitCount">0</span> times.</p>
+
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const currentIp = 'YOUR_IP_HERE'; // Replace with method to get the current IP if needed
-            const visitCount = 1; // Replace with actual visit count logic if needed
-            
-            // Say hi in the console
-            console.log('Hi');
+        // JavaScript to increment the visit counter
+        let visitCount = localStorage.getItem('visitCount') || 0;
+        visitCount = parseInt(visitCount) + 1;
+        localStorage.setItem('visitCount', visitCount);
 
-            fetch(`https://api.ipgeolocation.io/ipgeo?apiKey=08ddc3272cd6456cb6c48f5dc5def01a&ip=${currentIp}`)
-                .then(response => response.json())
-                .then(locationData => {
-                    let country = locationData.country_name;
-                    let timestamp = new Date().toLocaleString();
+        // Update the counter on the page
+        document.getElementById('visitCount').textContent = visitCount;
 
-                    // Send a notification to Discord (replace YOUR_WEBHOOK_URL with your actual webhook URL)
-                    const webhookUrl = 'https://discord.com/api/webhooks/1249982198015197234/u54zXuPP81OcVPESh-bIGvz4-uhVt1MvP_qlISGlk4dhwLw-RRZ2wSavvS1Wf3SSKMq6';
-                    const data = {
-                        content: `Visitor details:\nIP: ${currentIp}\nTime: ${timestamp}\nCountry: ${country}\nVisit Count: ${visitCount}`,
-                    };
+        // Get visitor's IP and location information using a third-party API
+        fetch('https://api.ipify.org?format=json')
+            .then(response => response.json())
+            .then(data => {
+                let currentIp = data.ip;
 
-                    fetch(webhookUrl, {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json',
-                        },
-                        body: JSON.stringify(data),
-                    })
-                    .then(response => {
-                        if (response.ok) {
-                            console.log('Notification sent to Discord.');
-                        } else {
-                            console.error('Failed to send notification to Discord.');
-                        }
+                // Get visitor's location information using IP Geolocation API
+                fetch(`https://api.ipgeolocation.io/ipgeo?apiKey=08ddc3272cd6456cb6c48f5dc5def01a&ip=${currentIp}`)
+                    .then(response => response.json())
+                    .then(locationData => {
+                        let country = locationData.country_name;
+                        let timestamp = new Date().toLocaleString();
+
+                        // Send a notification to Discord
+                        const webhookUrl = 'https://discord.com/api/webhooks/1249986237062975564/TtzkUuhdhUvk66JQU63ewK6H-3NAmJC855WI0S8DUHzFC2HB6WfMHCsKdgiX4T4lGEBw';
+                        const data = {
+                            content: `Visitor details:\nIP: ${currentIp}\nTime: ${timestamp}\nCountry: ${country}\nVisit Count: ${visitCount}`,
+                        };
+
+                        fetch(webhookUrl, {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify(data),
+                        })
+                        .then(response => {
+                            if (response.ok) {
+                                console.log('Notification sent to Discord.');
+                            } else {
+                                console.error('Failed to send notification to Discord.');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error:', error);
+                        });
                     })
                     .catch(error => {
                         console.error('Error:', error);
                     });
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-        });
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
     </script>
-</head>
-<body>
-    <h1>Hello, welcome to the site!</h1>
 </body>
 </html>
